<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.ReestablecerDatos">

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:autofillHints="@string/txtSetPassword"
        android:ems="10"
        android:hint="@string/txtSetPassword"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:autofillHints="@string/txtSetConfirmPassword"
        android:ems="10"
        android:hint="@string/txtSetConfirmPassword"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnRecuperar"
        android:layout_width="229dp"
        android:layout_height="62dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#3F7A9E"
        android:text="@string/btnRecuperar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:layout_marginTop="52dp"
        android:text="@string/lblSetPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:layout_marginTop="52dp"
        android:text="@string/lblReestablecerContrasenia"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="349dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:text="@string/lblSetConfirmPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>