<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="132dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/imgLogo"
        android:src="@drawable/logouser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:autofillHints="@string/txtpassword"
        android:ems="10"
        android:hint="@string/txtpassword"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/txtusuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtusuario"
        app:layout_constraintTop_toBottomOf="@+id/txtusuario" />

    <Button
        android:id="@+id/btnAcceso"
        android:layout_width="229dp"
        android:layout_height="62dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#3F7A9E"
        android:text="@string/btnAcceso"
        app:layout_constraintEnd_toEndOf="@+id/txtpassword"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/txtpassword"
        app:layout_constraintTop_toBottomOf="@+id/txtpassword" />

    <EditText
        android:id="@+id/txtusuario"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:autofillHints="@string/txtusuario"
        android:ems="10"
        android:hint="@string/txtusuario"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txtRecuperacion"
        android:layout_width="187dp"
        android:layout_height="26dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtRecupearContrasenia"
        android:textAlignment="viewEnd"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpassword" />

</androidx.constraintlayout.widget.ConstraintLayout>