<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.Recuperacion">


    <EditText
        android:id="@+id/txtUsuario"
        android:layout_width="344dp"
        android:layout_height="49dp"
        android:layout_marginTop="124dp"
        android:autofillHints="@string/txtUsuarioRecuperar"
        android:ems="10"
        android:hint="@string/txtUsuarioRecuperar"
        android:inputType="textPersonName"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAnswerS"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:layout_marginBottom="104dp"
        android:autofillHints="@string/txtAnswerS"
        android:ems="10"
        android:hint="@string/txtAnswerS"
        android:inputType="textPassword"
        android:text=""
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnRecuperarC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRecuperarC"
        android:layout_width="229dp"
        android:layout_height="62dp"
        android:layout_marginBottom="236dp"
        android:backgroundTint="#3F7A9E"
        android:text="@string/btnReestablecer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtQuestionS"
        android:layout_width="340dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtQuestionS"
        app:layout_constraintBottom_toTopOf="@+id/txtAnswerS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario"
        app:layout_constraintVertical_bias="0.406" />


</androidx.constraintlayout.widget.ConstraintLayout>