<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="395dp"
        android:layout_height="448dp"
        android:background="#9A1212"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#CCDDE7"
            app:cardCornerRadius="25dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/imgproducto"
                android:layout_width="299dp"
                android:layout_height="185dp"
                android:contentDescription="@string/imgProducto"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/txtStock"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/txtStock"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPrecio" />

            <TextView
                android:id="@+id/txtPrecio"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/txtPrecio"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/txtNombre"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <Button
                android:id="@+id/btnVerDetalles"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:backgroundTint="#404040"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/btnVerDetalles"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtStock"
                app:layout_constraintVertical_bias="0.157" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="221dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>