<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.DetalleProducto">


    <TextView
        android:id="@+id/txtNombre1"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/txtNombre"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgproducto"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="395dp" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="421dp"
        android:layout_height="184dp"
        android:background="#AFF1F8"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgproducto"
        android:layout_width="185dp"
        android:layout_height="128dp"
        android:contentDescription="@string/imgProducto"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/materialToolbar"
        app:layout_constraintVertical_bias="0.287"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imgEtiqueta"
        android:layout_width="236dp"
        android:layout_height="382dp"
        android:contentDescription="@string/imgProducto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:srcCompat="@drawable/etiqueta" />

    <TextView
        android:id="@+id/lblPrecioCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/txtPrecioCompra"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/lblPrecioVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/txtPrecioVenta"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.768"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPrecioCompra" />

    <TextView
        android:id="@+id/lblStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/txtStock"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPrecioVenta" />

    <TextView
        android:id="@+id/lblProveedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/txtProveedor"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblStock" />

    <TextView
        android:id="@+id/txtProveedor"
        android:layout_width="100dp"
        android:layout_height="19dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/txtProveedor"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toEndOf="@+id/lblProveedor"
        app:layout_constraintTop_toBottomOf="@+id/txtStock1"
        app:layout_constraintVertical_bias="0.231" />

    <TextView
        android:id="@+id/txtStock1"
        android:layout_width="70dp"
        android:layout_height="19dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/txtStock"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecio1" />

    <TextView
        android:id="@+id/txtPrecioCompra1"
        android:layout_width="70dp"
        android:layout_height="19dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/txtPrecioCompra"
        android:textAlignment="textEnd"

        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/txtPrecio1"
        android:layout_width="70dp"
        android:layout_height="19dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/txtPrecioVenta"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecioCompra1" />

    <EditText
        android:id="@+id/txtDescripcionProd"
        android:layout_width="370dp"
        android:layout_height="88dp"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="center|top"
        android:inputType="textMultiLine"
        android:text="@string/txtDescripcion"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre1"
        app:layout_constraintVertical_bias="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="238dp" />
</androidx.constraintlayout.widget.ConstraintLayout>