<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vista.Principal">

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="247dp"
        android:layout_height="47dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/txtusuario2"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="101dp"
        android:layout_height="91dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:maxWidth="20dp"
        android:maxHeight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvlista"
        android:layout_width="406dp"
        android:layout_height="562dp"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.157" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="168dp" />


    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#3F7A9E"
        android:text="@string/btnBuscar"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toEndOf="@+id/txtBuscar" />

    <EditText
        android:id="@+id/txtBuscar"
        android:layout_width="246dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:autofillHints=""
        android:hint="@string/txtBuscar"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        android:ems="10"
        android:inputType="text"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="119dp" />

</androidx.constraintlayout.widget.ConstraintLayout>